--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ platform = espressif32
 board = m5stack-stamps3
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
-build_flags = -DARDUINO_USB_CDC_ON_BOOT=1 -std=gnu++2a -D IR_RECEIVE_PIN=1 -D IR_SEND_PIN=44
+build_flags = -std=gnu++2a -D IR_RECEIVE_PIN=1 -D IR_SEND_PIN=44
 monitor_speed = 115200
 monitor_dtr = 0
 monitor_rts = 0 
